overflow fix

--- a/sites/all/themes/campsite/sass/partials/_menu.scss
+++ b/sites/all/themes/campsite/sass/partials/_menu.scss
@@ -15,6 +15,17 @@
   -webkit-transition: -webkit-transform 300ms ease;
   -webkit-transform: translate3d(0, 0, 0);
 
+  /* 
+    When mobile nav is open, overflow some elements
+    that have negative margin that impedees into the mobile 
+    navigation. 
+   */
+  &.open {
+    #content,
+    #footer {
+      overflow: hidden;
+    }
+  }
 }
 
 #navigation .block-menu-block { // the Main Menu's menu block
@@ -43,20 +54,6 @@
       text-decoration: none;
     }
     &:hover{color:#0077a5;}
-  }
-}
-
-#page {
-  /* 
-    When mobile nav is open, overflow some elements
-    that have negative margin that impedees into the mobile 
-    navigation. 
-   */
-  &.open {
-    #content,
-    #footer {
-      overflow: hidden;
-    }
   }
 }
 
